--- a/FamilySys/Views/Admin/ChangeRate.cshtml
+++ b/FamilySys/Views/Admin/ChangeRate.cshtml
@@ -33,7 +33,7 @@
         <div>
             <input id="ID" name="ID" value="@Model.ID" type="hidden"/>
             <input id="HouseworkID" name="HouseworkID" value="@Model.HouseworkID" type="hidden"/>
-            <input type="submit" name="SubBtn" class="btn btn-success"/>
+            <input type="submit" name="SubBtn" onclick="return ensure()" class="btn btn-success"/>
         </div>
     }
 </div>
