--- a/FamilySys/Views/Shared/_AdminLayout.cshtml
+++ b/FamilySys/Views/Shared/_AdminLayout.cshtml
@@ -65,6 +65,7 @@
 							<li>
 								<a style="color: #9d9d9d" asp-controller="Admin" asp-action="Members">成员信息管理</a>
 								<a style="color: #9d9d9d" asp-controller="Admin" asp-action="ShowHouseworks">事务信息管理</a>
+								<a style="color: #9d9d9d" asp-controller="Admin" asp-action="ShowDreams">家庭梦想管理</a>
 							</li>
 						</ul>
 					</li>
@@ -161,6 +162,7 @@
 							<li>
 								<a style="color: #9d9d9d" asp-controller="Admin" asp-action="Members">成员信息管理</a>
 								<a style="color: #9d9d9d" asp-controller="Admin" asp-action="ShowHouseworks">事务信息管理</a>
+								<a style="color: #9d9d9d" asp-controller="Admin" asp-action="ShowDreams">家庭梦想管理</a>
 							</li>
 						</ul>
 					</li>
