多项更改 系统初次运行时，需要设置管理员用户 设置日间/夜间模式的页面背景 初次运行页面添加canvas动态效果

--- a/FamilySys/Views/Shared/_MemberLayout.cshtml
+++ b/FamilySys/Views/Shared/_MemberLayout.cshtml
@@ -29,7 +29,7 @@
 	</environment>
 </head>
 @if (Context.Request.Cookies["mode"] == "night") {
-<body style="background-color: #333; color: #F5F5F5;">
+<body background="images/prism.png" style="color: #F5F5F5;">
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
@@ -134,7 +134,7 @@
 	<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 </body>
 } else {
-<body>
+<body  background="images/dynamic-style.png">
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
