多项更改 更改访客、管理员主页功能说明 修复用户在没有家庭梦想的情况下查看成员梦想出错的bug 修复site.js导致的页面背景设置错误问题 修复只有主页能够加载图片背景的问题

--- a/FamilySys/Views/Admin/MyInfo.cshtml
+++ b/FamilySys/Views/Admin/MyInfo.cshtml
@@ -1,11 +1,11 @@
 ﻿@using Microsoft.AspNetCore.Server.Kestrel.Core.Internal.Http
 @model FamilySys.Models.ViewModels.MemberViewModel.Member_MyInfo_ChgPwd_ViewModel
 @{
-    ViewData["Title"] = "管理员";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+	ViewData["Title"] = "管理员";
+	Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-
+@Html.Raw(TempData["Success"])
 <div class="row">
 	<h1 align="center">我的信息</h1>
 	@using (Html.BeginForm("ChgInfo", "Admin", HttpMethod.Post)) {
@@ -118,7 +118,7 @@
 				</tr>
 			</table>
 			<div class="field-validation-error">
-				<p>@TempData["ErrMsg"]</p>
+				<p>@TempData["WrongPwd"]</p>
 			</div>
 			<br />
 			<div align="center">
