--- a/FamilySys/Views/Shared/_AdminLayout.cshtml
+++ b/FamilySys/Views/Shared/_AdminLayout.cshtml
@@ -29,7 +29,7 @@
 	</environment>
 </head>
 @if (Context.Request.Cookies["mode"] == "night") {
-<body background="images/prism.png" style="color: #F5F5F5;">
+<body background="/images/prism.png" style="color: #F5F5F5;">
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
@@ -126,7 +126,7 @@
 	<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 </body>
 } else {
-<body background="images/dynamic-style.png">
+<body background="/images/dynamic-style.png">
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
