--- a/FamilySys/Views/Admin/Index.cshtml
+++ b/FamilySys/Views/Admin/Index.cshtml
@@ -46,39 +46,33 @@
 		<span class="sr-only">Next</span>
 	</a>
 </div>
-
+<h2 align="center">功能 - 管理员</h2>
+<br/>
 <div class="row">
 	<div class="col-md-6">
-		<h2>功能 - 管理员</h2>
 		<ul>
 			<li>
-				家庭成员 - 查看和管理家庭成员信息
-			</li>
-			<li>
-				家庭事务 - 查看和管理家庭事务信息
-			</li>
-			<li>
-				公告 - 
+				公告
 				<ul>
 					<li>发布公告 - 发布新公告</li>
 					<li>查看公告 - 查看、编辑和删除公告</li>
 				</ul>
 			</li>
+			<li style="list-style: none"><br/></li>
 			<li>
 				你好，管理员 - 查看和修改个人信息、修改密码、配置邮件收发地址 以及 配置Bark推送地址
 			</li>
-			<li>
-				...
-			</li>
 		</ul>
 	</div>
-
 	<div class="col-md-6">
-		<h2>部署及使用</h2>
 		<ul>
 			<li>
-				<p>在控制台执行指令</p>
-				<pre>dotnet run FamilySys</pre>
+				信息管理
+				<ul>
+					<li>成员信息管理 - 查看、修改家庭成员个人信息</li>
+					<li>事务信息管理 - 查看、修改家庭事务信息</li>
+					<li>家庭梦想管理 - 查看、修改成员的家庭梦想</li>
+				</ul>
 			</li>
 		</ul>
 	</div>
