多项更改 数据库添加得分记录表 更改了公告内容的存储格式 添加成员查看得分记录页面

--- a/FamilySys/Views/Admin/Index.cshtml
+++ b/FamilySys/Views/Admin/Index.cshtml
@@ -60,7 +60,7 @@
 			</li>
 			<li style="list-style: none"><br/></li>
 			<li>
-				你好，管理员 - 查看和修改个人信息、修改密码、配置邮件收发地址 以及 配置Bark推送地址
+				你好，管理员 - 查看和修改个人信息、修改密码
 			</li>
 		</ul>
 	</div>
