--- a/FamilySys/Views/Member/Index.cshtml
+++ b/FamilySys/Views/Member/Index.cshtml
@@ -47,35 +47,48 @@
 		<span class="sr-only">Next</span>
 	</a>
 </div>
-
+<h2 align="center">功能 - 家庭成员</h2>
 <div class="row">
 	<div class="col-md-6">
-		<h2>功能 - 家庭成员</h2>
 		<ul>
-			<li>
-				家庭成员 - 查看家庭成员信息
-			</li>
-			<li>
-				家庭事务 - 查看家庭事务信息
-			</li>
 			<li>
 				公告 - 查看公告
 			</li>
 			<li>
-				你好，[用户名] - 查看和修改个人信息、修改密码、配置邮件收发地址 以及 配置Bark推送地址
+				家庭成员 - 查看家庭成员信息
 			</li>
 			<li>
-				...
+				家庭梦想
+				<ul>
+					<li>
+						成员梦想 - 查看其他成员的家庭梦想并投票
+					</li>
+					<li>
+						查看事务 - 设定、修改我的家庭梦想
+					</li>
+				</ul>
 			</li>
 		</ul>
 	</div>
 
 	<div class="col-md-6">
-		<h2></h2>
 		<ul>
 			<li>
-				<p>在控制台执行指令</p>
-				<pre>dotnet run FamilySys</pre>
+				家庭事务
+				<ul>
+					<li>
+						发布事务 - 发布新家庭事务
+					</li>
+					<li>
+						查看事务 - 查看、接收家庭事务
+					</li>
+					<li>
+						我的事务 - 查看已发布、接收的家庭事务，对已完成的事务评分
+					</li>
+				</ul>
+			</li>
+			<li>
+				你好，[用户名] - 查看和修改个人信息、修改密码
 			</li>
 		</ul>
 	</div>
