--- a/FamilySys/Views/Member/MyHouseworks.cshtml
+++ b/FamilySys/Views/Member/MyHouseworks.cshtml
@@ -235,6 +235,11 @@
 												<input type="submit" name="SubBtn" class="btn btn-sm btn-primary" value="查看评分" />
 											}
 										</td>
+									} else {
+										<td></td>
+										<td>
+											待评分
+										</td>
 									}
 								</tr>
 							</table>
