--- a/FamilySys/Views/Member/ShowHouseworks.cshtml
+++ b/FamilySys/Views/Member/ShowHouseworks.cshtml
@@ -66,6 +66,11 @@
 											<input type="submit" name="SubBtn" class="btn btn-sm btn-primary" value="查看评分" />
 										}
 									</td>
+								} else if (ViewBag.Username != housework.FromUsername) {
+									<td></td>
+									<td>
+										待评分
+									</td>
 								}
 							</tr>
 						</table>	
