添加管理员查看得分记录，更新主页功能描述

--- a/FamilySys/Views/Member/Index.cshtml
+++ b/FamilySys/Views/Member/Index.cshtml
@@ -55,7 +55,15 @@
 				公告 - 查看公告
 			</li>
 			<li>
-				家庭成员 - 查看家庭成员信息
+				家庭成员
+				<ul>
+					<li>
+						成员信息 - 查看家庭成员信息
+					</li>
+					<li>
+						得分记录 - 查看家庭成员得分记录
+					</li>
+				</ul>
 			</li>
 			<li>
 				家庭梦想
