--- a/FamilySys/Views/Shared/_AdminLayout.cshtml
+++ b/FamilySys/Views/Shared/_AdminLayout.cshtml
@@ -69,6 +69,9 @@
 							</li>
 						</ul>
 					</li>
+					<li>
+						<a asp-area="" asp-controller="Admin" asp-action="ShowRecords">得分记录</a>
+					</li>
 				</ul>
 				<ul class="nav navbar-right navbar-nav" style="background-color: azure">
 					<li>
@@ -165,6 +168,9 @@
 								<a style="color: #9d9d9d" asp-controller="Admin" asp-action="ShowDreams">家庭梦想管理</a>
 							</li>
 						</ul>
+					</li>
+					<li>
+						<a asp-area="" asp-controller="Admin" asp-action="ShowRecords">得分记录</a>
 					</li>
 				</ul>
 				<ul class="nav navbar-right navbar-nav" style="background-color: azure">
