将事务查看页面、得分统计页面进行分页

--- a/FamilySys/Views/Admin/ShowHouseworks.cshtml
+++ b/FamilySys/Views/Admin/ShowHouseworks.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Server.Kestrel.Core.Internal.Http
-@model IQueryable<FamilySys.Models.ViewModels.MemberViewModel.HouseworkShowcaseViewModel>
+@model Sakura.AspNetCore.IPagedList<FamilySys.Models.ViewModels.MemberViewModel.HouseworkShowcaseViewModel>
 @{
 	ViewData["Title"] = "管理员";
 	Layout = "~/Views/Shared/_AdminLayout.cshtml";
@@ -116,5 +116,8 @@
 			}
 		}
 	</table>
+	<div>
+		<pager source="Model" />
+	</div>
 </div>
 
