--- a/FamilySys/Views/Member/Members.cshtml
+++ b/FamilySys/Views/Member/Members.cshtml
@@ -1,5 +1,5 @@
 ﻿@using FamilySys.Models.DbModels
-@model IQueryable<FamilySys.Models.DbModels.User>
+@model Sakura.AspNetCore.IPagedList<FamilySys.Models.DbModels.User>
 @{
 	ViewData["Title"] = "家庭成员";
 	Layout = "~/Views/Shared/_MemberLayout.cshtml";
@@ -18,14 +18,17 @@
 	</tr>
 	@foreach (var each in Model)
 	{
-	<tr>
-		<td style="text-align: center">@each.ID</td>
-		<td style="text-align: center">@each.Username</td>
-		<td style="text-align: center">@each.Sex</td>
-		<td style="text-align: center">@each.Phone</td>
-		<td style="text-align: center">@each.Mail</td>
-		<td style="text-align: center">@each.Score</td>
-	</tr>
+		<tr>
+			<td style="text-align: center">@each.ID</td>
+			<td style="text-align: center">@each.Username</td>
+			<td style="text-align: center">@each.Sex</td>
+			<td style="text-align: center">@each.Phone</td>
+			<td style="text-align: center">@each.Mail</td>
+			<td style="text-align: center">@each.Score</td>
+		</tr>
 	}
 </table>
+<div align="center">
+	<pager source="Model"/>
+</div>
 
