--- a/FamilySys/Views/Member/ShowAnnouncements.cshtml
+++ b/FamilySys/Views/Member/ShowAnnouncements.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Server.Kestrel.Core.Internal.Http
-@model IQueryable<FamilySys.Models.DbModels.Announcement>
+@model Sakura.AspNetCore.IPagedList<FamilySys.Models.DbModels.Announcement>
 @{
 	ViewData["Title"] = "家庭成员";
 	Layout = "~/Views/Shared/_MemberLayout.cshtml";
@@ -32,4 +32,7 @@
 		</tr>
 	}
 </table>
+<div align="center">
+	<pager source="Model"/>
+</div>
 
