--- a/FamilySys/Views/Shared/_AdminLayout.cshtml
+++ b/FamilySys/Views/Shared/_AdminLayout.cshtml
@@ -69,8 +69,17 @@
 							</li>
 						</ul>
 					</li>
-					<li>
-						<a asp-area="" asp-controller="Admin" asp-action="ShowRecords">得分记录</a>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+							积分信息
+							<b class="caret"></b>
+						</a>
+						<ul class="dropdown-menu nav" style="background-color: #333;">
+							<li>
+								<a style="color: #9d9d9d" asp-area="" asp-controller="Admin" asp-action="ShowRecords">得分记录</a>
+								<a style="color: #9d9d9d" asp-area="" asp-controller="Admin" asp-action="ShowRanks">月度排名</a>
+							</li>
+						</ul>
 					</li>
 				</ul>
 				<ul class="nav navbar-right navbar-nav" style="background-color: azure">
@@ -169,8 +178,17 @@
 							</li>
 						</ul>
 					</li>
-					<li>
-						<a asp-area="" asp-controller="Admin" asp-action="ShowRecords">得分记录</a>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+							积分信息
+							<b class="caret"></b>
+						</a>
+						<ul class="dropdown-menu nav" style="background-color: #333;">
+							<li>
+								<a style="color: #9d9d9d" asp-area="" asp-controller="Admin" asp-action="ShowRecords">得分记录</a>
+								<a style="color: #9d9d9d" asp-area="" asp-controller="Admin" asp-action="ShowRanks">月度排名</a>
+							</li>
+						</ul>
 					</li>
 				</ul>
 				<ul class="nav navbar-right navbar-nav" style="background-color: azure">
