--- a/FamilySys/Views/Shared/_MemberLayout.cshtml
+++ b/FamilySys/Views/Shared/_MemberLayout.cshtml
@@ -58,7 +58,7 @@
 								<a style="color: #9d9d9d" asp-controller="Member" asp-action="ShowRecords">得分记录</a>
 							</li>
 							<li>
-								<a style="color: #9d9d9d" asp-controller="Member" asp-action="ShowRanks">排名</a>
+								<a style="color: #9d9d9d" asp-controller="Member" asp-action="ShowRanks">月度排名</a>
 							</li>
 						</ul>
 					</li>
@@ -179,7 +179,7 @@
 								<a style="color: #9d9d9d" asp-controller="Member" asp-action="ShowRecords">得分记录</a>
 							</li>
 							<li>
-								<a style="color: #9d9d9d" asp-controller="Member" asp-action="ShowRanks">排名</a>
+								<a style="color: #9d9d9d" asp-controller="Member" asp-action="ShowRanks">月度排名</a>
 							</li>
 						</ul>
 					</li>
