修改成员和管理员功能描述

--- a/FamilySys/Views/Admin/Index.cshtml
+++ b/FamilySys/Views/Admin/Index.cshtml
@@ -58,9 +58,16 @@
 					<li>查看公告 - 查看、编辑和删除公告</li>
 				</ul>
 			</li>
-			<li style="list-style: none"><br/></li>
 			<li>
-				你好，管理员 - 查看和修改个人信息、修改密码
+				积分信息
+				<ul>
+					<li>
+						得分记录 - 查看家庭成员得分记录
+					</li>
+					<li>
+						月度排名 - 查看成员得分月度排名
+					</li>
+				</ul>
 			</li>
 		</ul>
 	</div>
@@ -74,8 +81,9 @@
 					<li>家庭梦想管理 - 查看、修改成员的家庭梦想</li>
 				</ul>
 			</li>
+			<li style="list-style: none"><br /></li>
 			<li>
-				得分记录 - 查看家庭成员得分记录
+				你好，管理员 - 查看和修改个人信息、修改密码
 			</li>
 		</ul>
 	</div>
