优化成员主页的功能描述布局

--- a/FamilySys/Views/Member/Index.cshtml
+++ b/FamilySys/Views/Member/Index.cshtml
@@ -68,16 +68,9 @@
 					</li>
 				</ul>
 			</li>
+			<li style="list-style: none"><br /></li>
 			<li>
-				家庭梦想
-				<ul>
-					<li>
-						成员梦想 - 查看其他成员的家庭梦想并投票
-					</li>
-					<li>
-						查看事务 - 设定、修改我的家庭梦想
-					</li>
-				</ul>
+				你好，[用户名] - 查看和修改个人信息、修改密码
 			</li>
 		</ul>
 	</div>
@@ -99,8 +92,17 @@
 				</ul>
 			</li>
 			<li>
-				你好，[用户名] - 查看和修改个人信息、修改密码
+				家庭梦想
+				<ul>
+					<li>
+						成员梦想 - 查看其他成员的家庭梦想并投票
+					</li>
+					<li>
+						查看事务 - 设定、修改我的家庭梦想
+					</li>
+				</ul>
 			</li>
+			
 		</ul>
 	</div>
 </div>
