--- a/FamilySys/Views/Home/nonMemberAlarm.cshtml
+++ b/FamilySys/Views/Home/nonMemberAlarm.cshtml
@@ -4,9 +4,8 @@
 	ViewData["Title"] = "无法访问";
 	Layout = "~/Views/Shared/_Layout.cshtml";
 	TempData["Alert"] = "<script>alert('您尚未登录');</script>";
-	Context.Response.WriteAsync("<meta http-equiv='refresh' content='3; url=/Login' />");
 }
-
+<meta http-equiv='refresh' content='3; url=/Login' />
 <h2>无法访问</h2>
 
 <body>
