--- a/FamilySys/Views/Shared/_MemberLayout.cshtml
+++ b/FamilySys/Views/Shared/_MemberLayout.cshtml
@@ -93,6 +93,17 @@
 							</li>
 						</ul>
 					</li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+							推送设置
+							<b class="caret"></b>
+						</a>
+						<ul class="dropdown-menu nav" style="background-color: #333;">
+							<li>
+								<a style="color: #9d9d9d" asp-controller="Member" asp-action="EditBark">Bark设置</a>
+							</li>
+						</ul>
+					</li>
 				</ul>
 				<ul class="nav navbar-right navbar-nav" style="background-color: azure">
 					<li>
@@ -211,6 +222,17 @@
 							</li>
 							<li>
 								<a style="color: #9d9d9d" asp-controller="Member" asp-action="MyDream">我的梦想</a>
+							</li>
+						</ul>
+					</li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+							推送设置
+							<b class="caret"></b>
+						</a>
+						<ul class="dropdown-menu nav" style="background-color: #333;">
+							<li>
+								<a style="color: #9d9d9d" asp-controller="Member" asp-action="EditBark">Bark设置</a>
 							</li>
 						</ul>
 					</li>
