修复测试Url无法传入后端bug

--- a/FamilySys/Views/Member/EditBark.cshtml
+++ b/FamilySys/Views/Member/EditBark.cshtml
@@ -89,7 +89,7 @@
 						<td>&nbsp;&nbsp;</td>
 						<td>
 							@using (Html.BeginForm("Bark", "Member", FormMethod.Post)) {
-								<input id="testUrl" type="hidden" name="testUrl" value="" />
+								<input id="testUrl" type="hidden" name="Url" value="" />
 								@*<input type="hidden" name="Address" value="@Model.Address"/>
 								<input type="hidden" name="Key" value="@Model.Key"/>
 								<input type="hidden" name="Is_https" value="@Model.Is_https"/>
