增加管理员对Bark推送地址的管理功能 删除部分注释代码

--- a/FamilySys/Views/Admin/Index.cshtml
+++ b/FamilySys/Views/Admin/Index.cshtml
@@ -79,6 +79,7 @@
 					<li>成员信息管理 - 查看、修改家庭成员个人信息</li>
 					<li>事务信息管理 - 查看、修改家庭事务信息</li>
 					<li>家庭梦想管理 - 查看、修改成员的家庭梦想</li>
+					<li>Bark 推送地址管理 - 查看、修改成员的Bark 推送地址</li>
 				</ul>
 			</li>
 			<li style="list-style: none"><br /></li>
