--- a/FamilySys/Views/Member/Index.cshtml
+++ b/FamilySys/Views/Member/Index.cshtml
@@ -68,7 +68,15 @@
 					</li>
 				</ul>
 			</li>
-			<li style="list-style: none"><br /></li>
+			<li>
+				推送设置
+				<ul>
+					<li>
+						Bark 设置 - 设置Bark 推送地址
+					</li>
+				</ul>
+			</li>
+			@*<li style="list-style: none"><br /></li>*@
 			<li>
 				你好，[用户名] - 查看和修改个人信息、修改密码
 			</li>
