--- a/FamilySys/Views/Shared/_AdminLayout.cshtml
+++ b/FamilySys/Views/Shared/_AdminLayout.cshtml
@@ -67,6 +67,9 @@
 								<a style="color: #9d9d9d" asp-controller="Admin" asp-action="ShowHouseworks">事务信息管理</a>
 								<a style="color: #9d9d9d" asp-controller="Admin" asp-action="ShowDreams">家庭梦想管理</a>
 							</li>
+							<li>
+								<a style="color: #9d9d9d" asp-controller="Admin" asp-action="ShowBarks">Bark 推送地址管理</a>
+							</li>
 						</ul>
 					</li>
 					<li class="dropdown">
@@ -173,8 +176,15 @@
 						<ul class="dropdown-menu nav" style="background-color: #333;">
 							<li>
 								<a style="color: #9d9d9d" asp-controller="Admin" asp-action="Members">成员信息管理</a>
+							</li>
+							<li>
 								<a style="color: #9d9d9d" asp-controller="Admin" asp-action="ShowHouseworks">事务信息管理</a>
+							</li>
+							<li>
 								<a style="color: #9d9d9d" asp-controller="Admin" asp-action="ShowDreams">家庭梦想管理</a>
+							</li>
+							<li>
+								<a style="color: #9d9d9d" asp-controller="Admin" asp-action="ShowBarks">Bark 推送地址管理</a>
 							</li>
 						</ul>
 					</li>
@@ -186,6 +196,8 @@
 						<ul class="dropdown-menu nav" style="background-color: #333;">
 							<li>
 								<a style="color: #9d9d9d" asp-area="" asp-controller="Admin" asp-action="ShowRecords">得分记录</a>
+							</li>
+							<li>
 								<a style="color: #9d9d9d" asp-area="" asp-controller="Admin" asp-action="ShowRanks">月度排名</a>
 							</li>
 						</ul>
