修改首次运行页面提交按钮文字

--- a/FamilySys/Views/Welcome/Index.cshtml
+++ b/FamilySys/Views/Welcome/Index.cshtml
@@ -115,7 +115,7 @@
 					</tr>
 				</table>
 				<div>
-					<input type="submit" name="SubBtn" class="btn btn-success" />
+					<input type="submit" name="SubBtn" value="提交" class="btn btn-success" />
 				</div>
 				<br />
 			</div>
